--- a/websocket-server/Cargo.toml
+++ b/websocket-server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.83"
 axum = { version = "0.7.9", features = ["macros", "ws"] }
+base64 = "0.22.1"
 chrono = { version = "0.4.39", features = ["serde"] }
 dotenv = "0.15.0"
 futures = "0.3.31"
