--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "postinstall": "prisma generate",
@@ -40,6 +40,7 @@
     "framer-motion": "^11.13.5",
     "geist": "^1.3.0",
     "lucide-react": "^0.468.0",
+    "monaco-themes": "^0.4.4",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -50,6 +51,9 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "y-monaco": "^0.1.6",
+    "y-websocket": "^2.0.4",
+    "yjs": "^13.6.20",
     "zod": "^3.23.8"
   },
   "devDependencies": {
