--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "css-loader": "^6.8.1",
     "framer-motion": "^11.13.5",
     "geist": "^1.3.0",
     "lucide-react": "^0.468.0",
+    "monaco-editor": "^0.44.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -47,9 +50,14 @@
     "react-hook-form": "^7.54.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
+    "style-loader": "^3.3.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
+    "y-monaco": "^0.1.6",
+    "y-websocket": "^1.3.15",
+    "yjs": "^13.5.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
