--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-popover": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -38,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "css-loader": "^6.8.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.13.5",
     "geist": "^1.3.0",
     "lucide-react": "^0.468.0",
@@ -47,6 +49,7 @@
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "server-only": "^0.0.1",
