--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.3",
     "@radix-ui/react-select": "^2.1.3",
