--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "next dev",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "email": "email dev --dir src/lib/mail",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -32,11 +33,13 @@
     "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
+    "@react-email/components": "^0.0.31",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -50,6 +53,7 @@
     "monaco-themes": "^0.4.4",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.9.16",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -79,6 +83,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
+    "react-email": "3.0.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
