--- a/signaling-server/package.json
+++ b/signaling-server/package.json
@@ -5,8 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "build": "tsc"
   },
   "author": "luce-labs",
@@ -14,10 +14,11 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
-    "redis": "^4.7.0",
+    "express": "^4.21.2",
     "socket.io": "^4.8.1",
     "typescript": "^5.7.2",
     "uuid": "^11.0.3"
