--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "y-monaco": "^0.1.6",
     "y-websocket": "^1.3.15",
     "yjs": "^13.5.8",
